--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     // android circle imageview icin 3. yazilim kullandik
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //universal image loader
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
 }
